@@ -4,6 +4,16 @@
 	
 	2005-01-11  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/text/DefaultEditorKit.java
+	(deinstall): Removed.
+	(install): Likewise.
+	
+2005-01-13  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+	
+	2005-01-11  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/UIDefaults.java (put): Handle value of null.
 
 2005-01-13  Dalibor Topic  <robilad@kaffe.org>
